--- a/gb/20/2/9/n11855030.md
+++ b/gb/20/2/9/n11855030.md
@@ -1,57 +1,58 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kmtpx253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kmtpx253/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/kmtpx253/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/kmtpx253/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kmtpx253/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kmtpx253/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nuje2873/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/nuje2873/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/nuje2873/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nuje2873/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nuje2873/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nuje2873/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nuje2873/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nuje2873/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>视觉效果震撼 雕刻家祝神韵取得更大成功</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/2002090025522124-600x400.jpg" />
 <h6>2月8日晚，雕刻艺术家Adam Smith和太太Molly Smith观看了神韵晚会的演出。（林朴／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年02月09日讯】（大纪元记者林朴美国印第安纳波利斯报导） 2020年2月8日晚，美国<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>世界艺术团在印第安纳波利斯穆拉特（Murat）剧院进行第二场演出。雕刻艺术家Adam Smith祝愿神韵勇往直前，取得更大的成功，期待明年再看神韵。</p>
-<p>毕业于Dayton大学艺术系，毕生从事雕塑艺术的Smith拥有一家15年历史的艺术馆，是当地小有名气的艺术界人士，他和妻子Molly Smith一起观看了当晚的<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>演出，对神韵发出了由衷地赞叹。</p>
-<p>Molly首先称赞神韵晚会非常精彩，她对一切都非常喜欢，无论是舞蹈还是<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E8%89%B2%E5%BD%A9.md">色彩</a>或是音乐，尤其赞叹神韵艺术家的天赋。</p>
+	<p>【大纪元2020年02月09日讯】（大纪元记者林朴美国印第安纳波利斯报导） 2020年2月8日晚，美国<ahref="https://github.com/nuje2873/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团在印第安纳波利斯穆拉特（Murat）剧院进行第二场演出。雕刻艺术家Adam Smith祝愿神韵勇往直前，取得更大的成功，期待明年再看神韵。</p>
+<p>毕业于Dayton大学艺术系，毕生从事雕塑艺术的Smith拥有一家15年历史的艺术馆，是当地小有名气的艺术界人士，他和妻子Molly Smith一起观看了当晚的<ahref="https://github.com/nuje2873/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出，对神韵发出了由衷地赞叹。</p>
+<p>Molly首先称赞神韵晚会非常精彩，她对一切都非常喜欢，无论是舞蹈还是<ahref="https://github.com/nuje2873/djy/blob/master/gb/tag/%E8%89%B2%E5%BD%A9.md#1">色彩</a>或是音乐，尤其赞叹神韵艺术家的天赋。</p>
 <p>Adam深有同感地说：“我在舞蹈方面没有艺术背景，但还是被神韵的美震撼，无以言表！神韵的舞蹈编得实在太惊人了，演员的水平又如此之高，动作和身姿都是不凡的，他们把五千年的中国经典做到如此完美，我非常非常的惊喜。”</p>
-<p>作为雕刻艺术家，他尤其惊叹神韵在<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E8%89%B2%E5%BD%A9.md">色彩</a>方面的应用，还有天幕的视觉效果也让他震惊，“神韵的天幕设计，作为后台布景，做得非常好，视觉效果很震撼。”</p>
+<p>作为雕刻艺术家，他尤其惊叹神韵在<ahref="https://github.com/nuje2873/djy/blob/master/gb/tag/%E8%89%B2%E5%BD%A9.md#1">色彩</a>方面的应用，还有天幕的视觉效果也让他震惊，“神韵的天幕设计，作为后台布景，做得非常好，视觉效果很震撼。”</p>
 <p>他更是称赞水袖舞，那种飘逸的色彩让他觉得非常美妙迷人。“演员动作配合得非常好，我们看到色彩在欢快地流淌着，所有的动作都完美到位，这是一场绝对完美的视觉享受！”</p>
-<p>而神韵现场乐队<a href="https://github.com/kmtpx253/djy/blob/master/gb/tag/%E4%B8%9C%E8%A5%BF%E6%96%B9%E4%B9%90%E5%99%A8.md">东西方乐器</a>的配合也让他大开眼界，“神韵的音乐很神奇，我很难形容，就是感觉到一种心理的宁静，似乎能抚平我的心灵。”</p>
+<p>而神韵现场乐队<ahref="https://github.com/nuje2873/djy/blob/master/gb/tag/%E4%B8%9C%E8%A5%BF%E6%96%B9%E4%B9%90%E5%99%A8.md#1">东西方乐器</a>的配合也让他大开眼界，“神韵的音乐很神奇，我很难形容，就是感觉到一种心理的宁静，似乎能抚平我的心灵。”</p>
 <p>此外，神韵节目里精神层面的内涵也让Adam称赞不已，他说：“我很欣赏神韵把那种精神信仰作为一条线索贯穿全剧。他们表达了人们为了信仰自由而反抗中共的迫害，这体现了中国人的勇气，我对这样的节目安排非常赞成。”</p>
 <p>最后，了解到神韵的宗旨是恢复中国的传统文化，他表示深深理解，“神韵做得非常好，我祝愿他们勇往直前，取得更大的成功。我期待明年再次来看神韵。”</p>
 <p>责任编辑：夏晶</p>
 	
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/9/n11855030.htm">视觉效果震撼 雕刻家祝神韵取得更大成功</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11851103.htm">武汉肺炎疫情失控 习要动刀子 湖北官挨训</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849457.htm">武汉肺炎疫情失控 中共专制体制受挑战</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/31/n11835010.htm">世卫对武汉肺炎三改其口 背后的中共因素</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/28/n11828340.htm">【热点互动】武汉肺炎严重性 远超官方数据</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11824364.htm">海风：人祸比武汉疫情更可怕</a></li>
-> <li><a href="https://github.com/kmtpx253/djy/blob/master/gb/20/2/7/n11851114.md">新冠病毒比萨斯更狡猾 盘点其鲜为人知的一面</a></li>
-> <li><a href="https://github.com/kmtpx253/djy/blob/master/gb/20/2/6/n11849976.md">武汉进入战时状态 红二代：军管难解决问题</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎死亡惊人 武汉日烧百具死尸</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11853323.htm">【独家】一天烧百具尸体 殡仪馆员怒斥狗官</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852540.htm">政治局常委会要求落空 新医学专家否定老专家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/8/n11854313.htm">湖北省高层异动 习近平开始“动刀子”？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849036.htm">【历史上的瘟疫】被瘟疫摧毁的强大雅典</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/29/n11828782.htm">250岁的隐士 娓娓道出前朝旧事</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/30/n11833429.htm">乌鸦满天飞 预兆什么灾？如何消解？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/1/n11836330.htm">孝女感动神仙  孝心精诚穿越时空得护祐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852868.htm">李文亮去世 中共舆情分析报告网络曝光</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11851944.htm">陈秋实武汉失联 疑遭强制隔离 母亲求救</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11850310.htm">【疫情最前线】武汉实验室抢专利不慎泄密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849608.htm">【新闻看点】四大疑点 武汉病毒所卷入风暴眼</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852360.htm">【新闻看点】李文亮去世九亿围观 川习通话说啥</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852119.htm">【老外看香港】武汉肺炎 香港危急</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852148.htm">悼预警武汉肺炎医生 章子怡怒斥警方“耻辱”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11849645.htm">痛斥林郑限制佩戴口罩 关淑怡：施政似武则天</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852799.htm">小区现新冠病毒患者 陈浩明一家六口宅在家</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/7/n11852560.htm">被疑撑香港医护罢工 郭富城声明账号被盗用</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/6/n11850031.htm">儿子滑雪意外受伤 袁咏仪：这个年过得不容易</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/2/8/n11853516.md#1">集团总裁完美体验文化 赞神韵展现重要价值</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/2/8/n11853704.md#1">神韵演出神圣美好 室内设计师数度感动落泪</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/2/8/n11853754.md#1">律师陶醉于神韵 赞壮丽辉煌、至少要看一次</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/2/8/n11853763.md#1">神韵演出牵动心灵 会计师夫妇感动赞叹</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/2/8/n11853780.md#1">中西音乐完美融合 神韵令音乐人叹服激赏</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/2/8/n11853790.md#1">仿佛置身演出中 公司执行总监成神韵粉丝</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kmtpx253/djy/blob/master/gb/20/2/9/n11855030.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kmtpx253/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kmtpx253/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kmtpx253/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kmtpx253/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kmtpx253/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/8/n9817759.md#1" target="_blank">袁斌：“十月革命”真相与俄国三大倒退</a></li><li><a href="https://github.com/nuje2873/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/12/18/n3755139.md#1" target="_blank">佚名：迫害法轮功的中共人员犯了哪些法</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12212964.md#1">【内幕】王岐山汪洋与美方交手 铩羽而归</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/25/n12211217.md#1">【现场视频】湖北680座水库超汛限 房屋被淹</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/26/n12213782.md#1">日籍染疫学生接触者全阴性 庄人祥：有2种可能</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/25/n12211676.md#1">端午节北京下冰雹 形状酷似中共病毒</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/25/n12212175.md#1">中印边境冲突 军二代称中方2死3伤</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/24/n12210389.md#1">李英爱晒9岁龙凤胎近照 厨艺获网友夸赞</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/24/n12210154.md#1">术后袁惟仁52岁生日 儿子隔空祝寿惹人洒泪</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/25/n12212204.md#1">周星驰对赌失败 抵押11亿豪宅周转资金</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/24/n12209963.md#1">“火箭少女”解散 杨超越火速修改微博认证</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/25/n12212762.md#1">开工巧遇周润发 邝洁楹激动到合照不知望镜头</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/14/n12183964.md#1">【文史】古籍中多姿多彩的端午节粽</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/5/23/n12131668.md#1">【康熙大帝】鳌拜犯上 君臣交锋</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/5/15/n12112533.md#1">违背原著的宝玉娶亲</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/24/n12209159.md#1">端午：纯阳正气辟阴邪</a></li>
+<li><a href="https://github.com/nuje2873/djy/blob/master/gb/20/6/22/n12204829.md#1">【佳人传】一门皆风雅 沈宜修的诗意桃源</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nuje2873/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nuje2873/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/9/n11855030.htm">视觉效果震撼 雕刻家祝神韵取得更大成功</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nuje2873/djy/blob/master/gb/20/2/9/n11855030.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nuje2873/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nuje2873/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nuje2873/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nuje2873/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nuje2873/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
